<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Common.LoginSignup.Login"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/averia_gruesa_libre"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="42sp" />


        <ImageView
            android:layout_width="331dp"
            android:layout_height="265dp"
            android:layout_gravity="center"
            android:src="@drawable/login" />




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">




            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/enter_phone_number"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/phone"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_phone_number_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/averia_gruesa_libre"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_phone_number"
                android:hint="@string/enter_password"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/show_password"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/averia_gruesa_libre"
                    android:inputType="textPassword"

                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:id="@+id/forget_password_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password"
                android:layout_marginTop="10dp">


                <CheckBox
                    android:id="@+id/remember_me"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/averia_gruesa_libre"
                    android:text="@string/remember_me"

                    android:textColor="@color/black" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="-1dp"
                    android:layout_marginRight="-1dp"
                    android:fontFamily="@font/averia_gruesa_libre"
                    android:onClick="callForgetPassword"
                    android:text="@string/forget_password"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black" />


            </RelativeLayout>


            <Button
                android:id="@+id/letTheUserLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_block"
                android:layout_marginTop="22dp"
                android:background="@color/black"
                android:fontFamily="@font/averia_gruesa_libre"
                android:onClick="letTheUserLoggedIn"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/letTheUserLogIn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="callSignUpFromLogin"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:fontFamily="@font/averia_gruesa_libre"/>


            <RelativeLayout
                android:id="@+id/login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:elevation="8dp"
                android:padding="20dp"
                android:visibility="gone">


                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true" />


            </RelativeLayout>


        </RelativeLayout>


    </LinearLayout>






</ScrollView>